--- a/Test_NG1/test-output/emailable-report.html
+++ b/Test_NG1/test-output/emailable-report.html
@@ -9,11 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">11,662</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">9,863</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">Test_NG01.Annotations</td><td><a href="#m0">LoginTest</a></td><td rowspan="1">1755081904637</td><td rowspan="1">720</td></tr><tr class="passedeven"><td><a href="#m1">verifypage</a></td><td rowspan="1">1755081902966</td><td rowspan="1">9</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">Test_NG04.DemoShop_Task</td><td><a href="#m0">loginTest</a></td><td rowspan="1">1755169254191</td><td rowspan="1">2202</td></tr><tr class="passedeven"><td><a href="#m1">registerTest</a></td><td rowspan="1">1755169249019</td><td rowspan="1">5159</td></tr><tr class="passedeven"><td><a href="#m2">searchProduct</a></td><td rowspan="1">1755169256395</td><td rowspan="1">836</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">Test_NG01.Annotations#LoginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">Test_NG01.Annotations#verifypage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">Test_NG04.DemoShop_Task#loginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">Test_NG04.DemoShop_Task#registerTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">Test_NG04.DemoShop_Task#searchProduct</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
